// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionMenu component tests it should match snapshot 1`] = `
<div>
  <details
    aria-label="Selection menu"
    class="select"
    data-testid="@SelectionMenu/container"
  >
    <summary
      class="select__summary"
      data-testid="@SelectionMenu/summary"
      role="button"
    >
      Selected option:
       
      <span
        class="select__text"
      >
        -
      </span>
    </summary>
    <div
      class="menu"
    >
      <div
        class="menu__content"
      >
        <p
          class="menu__label"
        >
          Select one option
        </p>
      </div>
    </div>
  </details>
</div>
`;

exports[`SelectionMenu component tests it should match snapshot 2`] = `
<div>
  <details
    aria-label="Selection menu"
    class="select"
    data-testid="@SelectionMenu/container"
  >
    <summary
      class="select__summary"
      data-testid="@SelectionMenu/summary"
      role="button"
    >
      Selected option:
       
      <span
        class="select__text"
      >
        Any
      </span>
    </summary>
    <div
      class="menu"
    >
      <div
        class="menu__content"
      >
        <p
          class="menu__label"
        >
          Select one option
        </p>
        <button
          aria-label="Select Any option"
          class="menu__item"
          data-testid="@SelectionMenu/item"
          id="any"
        >
          <i
            class="fas fa-check"
            style="opacity: 1;"
          />
             
          Any
        </button>
        <button
          aria-label="Select Test1 option"
          class="menu__item"
          data-testid="@SelectionMenu/item"
          id="test1"
        >
          <i
            class="fas fa-check"
            style="opacity: 0;"
          />
             
          Test1
        </button>
        <button
          aria-label="Select Test2 option"
          class="menu__item"
          data-testid="@SelectionMenu/item"
          id="test2"
        >
          <i
            class="fas fa-check"
            style="opacity: 0;"
          />
             
          Test2
        </button>
      </div>
    </div>
  </details>
</div>
`;
